# mock-api

./: .flake8  .gitignore  .pylintrc  CLAUDE.md  DEVELOPER.md  INTEGRATION_LOG.md  PROGRESS.md  README.md  README_TESTING.md  USAGE.md  auth_mcp_stdio.py  auth_mcp_stdio_v2.py  auto_openapi_mcp.py  basic_mcp.py  basic_mcp_stdio.py  continue_dev_config_local.json  continue_dev_config_localhost.json  cookie_auth_minimal.py  main.py  mypy.ini  pyproject.toml  requrements.txt  teamcenter_auth_session.py  test_auth_integration.py  test_cookie_auth.py  test_mcp_contract.py
.claude/commands/: note.md  reflection.md
.continue/: SQLite-mcp-server.json  SQLite-mcp-server_session.md  Teamcenter-mcp-server.json  Teamcenter-mcp-server_session.md  Teamcenter-mcp-server_tutorial.md
.continue/mcpServers/: teamcenter-mcp-server.json  teamcenter-mcp-server.yaml
analysis/extrnal-docs/: 00_MCP_DESIGN.md  02_My_REST_API_has_a_valid_OpenAPI_as_it_was_created_using_FastAPI.md  03_Core_MCP_specification_and_reference.md  04_Recommended_MCP_server_Quickstart.md  05_How_MCP_servers_are_normally_secured.md  06_MCP_service_discovery.md  10_Playbook_for_standing-up_an_external_MCP_proxy_for_existing_streaming_REST_API.md  openapi.json
analysis/findings/: 02_mcp-tool-advertising-perfection.md
examples/: claude_desktop_config.json  continue-config.json  jetbrains-mcp.json  vscode-mcp.json
tests/: test_api_endpoints.py  test_auto_mcp.py  test_mcp_integration.py  test_mcp_simple.py  test_teamcenter_mcp.py  test_teamcenter_mcp_stdio.py  test_teamcenter_mcp_stdio_v2.py
(+33 files in other folders)
